# api-hero-rust

./: Cargo.toml  Procfile  README.md  docker-compose.yml
migrations/2020-01-20-232802_hero/: up.sql
src/: api_error.rs  db.rs  main.rs  sample_db.rs  schema.rs
src/handlers/: hero.rs
src/models/: hero.rs  mod.rs
