[package]
name = "api-actix"
version = "0.1.0"
authors = ["Jorge Mujica <riontdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", 'uuid'] }
dotenv = "0.15.0"
serde = "1.0.104"
serde_json = "1.0.45"
serde_derive = "1.0.104"
actix-diesel = { version = "0.3.0", features = [ "actix-web" ] }
futures = "0.3.1"
log = "0.4.8"
env_logger = "0.7.1"
r2d2 = "0.8.8"
actix = "0.9.0"
listenfd = "0.3"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
